# osr-console

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  combat-implementation-status.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tui-layouts.excalidraw
.github/workflows/: ci.yml
cli/: go.mod  main.go
cli/cmd/: character.go  root.go
docs/: index.md  main.css  osrgame.md  osrlib.md  tests.md
docs/reference/: ability.md  adventure.md  character_classes.md  constants.md  dice_roller.md  dungeon.md  dungeon_assistant.md  dungeon_master.md  encounter.md  enums.md  game_manager.md  index.md  inventory.md  item.md  item_factories.md  monster.md  monster_manual.md  party.md  player_character.md  quest.md  saving_throws.md  treasure.md  utils.md
osrcli/: README.md  pyproject.toml
osrcli/src/osrcli/: __init__.py  __main__.py
osrgame/: README.md  index.html  pyproject.toml
osrgame/osrgame/: __init__.py  __main__.py  app.py  example_adventure.py  game_state.py  osrgame.py  screen.py  screen.tcss  screen_adventure_browser.py  screen_character.py  screen_combat.py  screen_explore.py  screen_modal_new_char.py  screen_welcome.py  widgets.py
osrgame/osrgame/screens/: __init__.py  camping.py  char_creation.py  combat.py  confirm_modal.py  explore.py  game_over.py  level_up.py  load_game.py  main_menu.py  party_manager.py  town_hub.py  town_inn.py  town_shop.py  town_tavern.py  town_temple.py  town_training.py
osrgame/osrgame/styles/: app.tcss  character.tcss  explore.tcss
osrgame/osrgame/widgets/: __init__.py  ability_table.py  char_sheet.py  combat_action_bar.py  command_bar.py  dungeon_map.py  equipment_list.py  monster_group.py  narrative_panel.py  party_roster.py
osrgame/src/: osrgame.py  widgets.py
osrlib/: README.md  index.html  pyproject.toml
osrlib/osrlib/: __init__.py  ability.py  adventure.py  character_classes.py  combat.py  constants.py  dice_roller.py  dungeon.py  dungeon_assistant.py  dungeon_master.py  encounter.py  enums.py  game_manager.py  inventory.py  item.py  item_factories.py  monster.py  monster_manual.py  party.py  player_character.py  quest.py  saving_throws.py  treasure.py  utils.py
osrlib/osrlib/combat/: __init__.py  actions.py  conditions.py  context.py  dice_service.py  effects.py  engine.py  events.py  formatter.py  intents.py  modifiers.py  serializer.py  spells.py  state.py  tactical_providers.py  targeting.py  views.py
osrlib/src/: ability.py  adventure.py  character_classes.py  dice_roller.py  inventory.py  player_character.py
protos/: osrlib.proto
reference/: index.html
reference/ability/: index.html
reference/adventure/: index.html
reference/character_classes/: index.html
reference/constants/: index.html
reference/dice_roller/: index.html
reference/dungeon/: index.html
reference/dungeon_assistant/: index.html
reference/encounter/: index.html
reference/enums/: index.html
reference/inventory/: index.html
reference/item/: index.html
reference/item_factories/: index.html
reference/monster/: index.html
reference/monster_manual/: index.html
reference/party/: index.html
reference/player_character/: index.html
reference/quest/: index.html
reference/saving_throws/: index.html
reference/treasure/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: README.md  conftest.py  index.html  pyproject.toml  pytest.ini  test_doc_player_character.py  test_integration_adventure.py  test_integration_dungeon_master.py  test_integration_saveload.py  test_inventory.py  test_unit_adventure.py  test_unit_armor.py  test_unit_character_classes.py  test_unit_combat.py  test_unit_combat_action_bar.py  test_unit_combat_conditions.py  test_unit_combat_engine.py  test_unit_combat_flee.py  test_unit_combat_group_targeting.py  test_unit_combat_hd_pool.py  test_unit_combat_healing.py  test_unit_combat_items.py  test_unit_combat_modifiers.py  test_unit_combat_morale.py  test_unit_combat_ranged_spells.py  test_unit_combat_scaling.py  test_unit_combat_screen.py  test_unit_combat_turn_undead.py  test_unit_dice_roller.py  test_unit_dungeon.py  test_unit_dungeon_master.py  test_unit_encounter.py  test_unit_inventory.py  test_unit_item.py  test_unit_item_factories.py  test_unit_monster_party.py  test_unit_monster_stats_block.py  test_unit_party.py  test_unit_treasure.py  test_unit_utils.py
utils/: openai_file_util.py  pyproject.toml
work/: combat-design-rev-d.md  combat-phase-3.5-plan.md  combat-phase-3.5-review-podcast.md  combat-phase-4-branch-review.md  combat-phase-4-plan.md  tui-gold-box-design.md
