[project]
name = "osrcli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" }
]
dependencies = [
    "questionary>=2.0.1",
    "osrlib @ file:///Users/mmacy/repos/osr-console/osrcli/../osrlib",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"osrcli" = "osrcli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/osrcli"]
