[project]
name = "osrcli"
version = "0.1.0"
description = "CLI interface for OSR Console."
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0.1",
    "osrlib",
]

[project.scripts]
osrcli = "osrcli:main"

[tool.uv.sources]
osrlib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osrcli"]
