[project]
name = "osrgame"
version = "0.1.4"
description = "Text user interface (TUI) for OSR Console, a turn-based dungeon crawler RPG in the old-school renaissance style."
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=7.0.0",
    "osrlib",
]

[dependency-groups]
dev = [
    "textual-dev>=1.2.1",
]

[tool.uv.sources]
osrlib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
