[tool.poetry]
name = "osrlib"
version = "0.1.35"
description = "Turn-based dungeon-crawler game engine for OSR-style RPGs."
authors = ["Marsh Macy <mmacy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinydb = "^4.8.0"
openai = "^1.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
mkdocs-material = "^9.4.6"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-rerunfailures = "^12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
