[project]
name = "osrlib"
version = "0.1.86"
description = "Turn-based dungeon-crawler game engine for OSR-style RPGs."
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tinydb>=4.8.0",
    "openai>=1.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
