[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Test library for osrlib."
authors = ["Marsh Macy <mmacy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
osrlib = {path = "../osrlib"}
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
