[tool.poetry]
name = "tests"
version = "0.1.2"
description = "Test library for osrlib."
authors = ["Marsh Macy <mmacy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
osrlib = {path = "../osrlib"}


[tool.poetry.dev-dependencies]
osrlib = { path = "../osrlib" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
