[project]
name = "tests"
version = "0.1.2"
description = "Test library for osrlib."
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.2",
    "osrlib",
]

[tool.uv.sources]
osrlib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["conftest.py", "test_*.py"]
