[project]
name = "utils"
version = "0.1.0"
description = "Utility scripts"
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.3.5",
]

[tool.hatch.build]
only-include = ["openai_file_util.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
